--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
             <div class="inp">
                 <div class="taille">
                     <label for="taille">Votre taille en cm</label>
-                <input type="number" id="taille">
+                <input type="number" id="taille" required autofocus>
                 </div>
                 <div class="taille">
                     <label for="poids">Poids en KG</label>
-                    <input type="number" id="poids">
+                    <input type="number" id="poids" required>
                 </div>
                 
-                <button id="btn" onclick="calculImc(event)">Calculer</button>
+                <button id="btn" onclick="finale(event)">Calculer</button>
             </div>
         </form>
+        <div class="tab">
+        </div>
     </div>
     <div id="result"></div>
 </body>
