Ajout d'un filtre sur l'input

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                     <div>
                         <label for="taille">Votre taille en cm</label>
                     </div>
-                <input type="number" id="taille" required autofocus>
+                <input type="number" id="taille" placeholder="Exemple : 180" required autofocus>
                 </div>
                 <div class="taille">
                     <div>
                         <label for="poids">Poids en KG</label>
                     </div>
                     
-                    <input type="number" id="poids" required>
+                    <input type="number" id="poids" placeholder="Exemple : 70" required>
                 </div>
                 <div class="btn">
                     <button id="btn" onclick="finale(event)">Calculer</button>
